--- a/Adivina/Index.html
+++ b/Adivina/Index.html
@@ -15,7 +15,7 @@
         <button id="btnReset">Reiniciar Juego</button>
         <p id="feedback"></p>
         <p id="intentos-texto">Intentos:</p><span id="Intentos">0</span>
-<button class="volver-juegos"><a href="../Index.html">⬅ Volver a Juegos</a></button>
+<button class="volver-juegos"><a href="../index.html">⬅ Volver a Juegos</a></button>
     <script src="Adivina.js"></script>
 </body>
 </html>
