--- a/Conversor/Index.html
+++ b/Conversor/Index.html
@@ -24,7 +24,7 @@
             </select>   
         <input type="button" id="btnConvertir" value="Convertir"></input>
         <p id="resultado"></p>
-        <button class="volver-juegos"><a href="../Index.html">⬅ Volver a Juegos</a></button>
+        <button class="volver-juegos"><a href="../index.html">⬅ Volver a Juegos</a></button>
     </div>
 
     <script src="Conversor.js"></script>
