--- a/Tareas/Index.html
+++ b/Tareas/Index.html
@@ -12,7 +12,7 @@
         <input type="text" id="taskInput" placeholder="Ingresa una nueva tarea">
         <button id="addTaskButton">Agregar Tarea</button>
         <ul id="taskList"></ul> 
-        <button class="volver-juegos"><a href="../Index.html">⬅ Volver a Juegos</a></button>
+        <button class="volver-juegos"><a href="../index.html">⬅ Volver a Juegos</a></button>
     <script src="Tareas.js"></script>
 </body>
 </html>
