--- a/Trivia/Index.html
+++ b/Trivia/Index.html
@@ -47,7 +47,7 @@
         <div class="status-bar">
             <div class="status-text" id="status-text">Listo</div>
         </div>
-        <button class="volver-juegos"><a href="../Index.html">⬅ Volver a Juegos</a></button>
+        <button class="volver-juegos"><a href="../index.html">⬅ Volver a Juegos</a></button>
 
     </div>
 
