--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button onclick="location.href='PiedraPapelTijeras/Index.html'">Piedra, Papel o Tijeras</button>
     <button onclick="location.href='Tareas/Index.html'">Lista de Tareas</button>
     <button onclick="location.href='Trivia/Index.html'">Trivia</button>
+    <button onclick="location.href='Canvas/Index.html'">JUego en Canvas</button>
 
 
   <footer>
