--- a/Canvas/Index.html
+++ b/Canvas/Index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Bienvenido al Juego de Canva</h1>
+    <h2>Usa A y D para moverte!</h2>
     <canvas id="game" width="600" height="300" style="border:1px solid black;"></canvas>
        <script src="Canvas.js"></script>   
 </body>
 </html>
+
